--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "author": "Mark Marijnissen",
   "license": "MIT",
   "dependencies": {
-    "cordova-file-cache": "^1.1.1"
+    "bluebird": "^3.5.1",
+    "cordova-file-cache": "^1.1.1",
+    "cordova-promise-fs": "^1.2.5",
+    "express": "^4.16.2"
   }
 }
