--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "bluebird": "^3.5.1",
     "cordova-file-cache": "^1.1.1",
     "cordova-promise-fs": "^1.2.5",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "gulp": "^3.9.1"
   }
 }
