--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^3.5.1",
-    "cordova-file-cache": "^1.1.1",
-    "cordova-promise-fs": "^1.2.5",
+    "cordova-promise-fs": "git+https://github.com/barsv/cordova-promise-fs.git",
     "express": "^4.16.2",
     "gulp": "^3.9.1"
   }
